--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Try_01| Product Details</title>
+        <title>Try_01| E-commerce_product</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -64,13 +64,13 @@
                   <ul class="navbar-nav ml-auto">
   
                     <li class="nav-item">
-                      <a class="nav-link" href="Home.html">Home</a>
+                      <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link active" href="shop.html">Shop</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Blog</a>
+                      <a class="nav-link" href="blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">About</a>
@@ -80,7 +80,8 @@
                     </li>
                     <li class="nav-item">
                       <i class="fa fa-search"></i>
-                      <i class="fa fa-shopping-bag"></i>
+                      <a href="cart.html">
+                        <i class="fa fa-shopping-bag"></i></a>
                     </li>
                     
                 </div>
